package Msg;

message Coordinate {
		required int32 coord_x = 1;
		required int32 coord_y = 2;
		required int32 coord_z = 3;
	}

enum CellTag {
		Air = 1;
		Ground = 2;
		Building = 3;
	}
	
message Cell {
	message WindVector {
		required double wv_x = 1;
		required double wv_y = 2;
		required double wv_z = 3;
	}

	message Wind {
		required WindVector wind = 1;
		required WindVector potential = 2;
	}

	message Methane {
		required double concentration = 1;
	}

	required Coordinate coord = 1;
	required CellTag tag = 2;
	required Methane mtn = 3;
	required Wind wind = 4;
}

message Cells {
	repeated Cell cell = 1;
}

message Map {
	required Coordinate startIndex = 1;
	required Coordinate boundary = 2;
	repeated Cell cell = 3;
}